--- a/login.html
+++ b/login.html
@@ -13,18 +13,18 @@
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Hesap Oluştur</h1>
-			<input type="number" placeholder="TC Kimlik No" class="tc_kimlik_no"/>
-			<input type="text" placeholder="Ad Soyad"class="adSoyad"/>
-			<input type="email" placeholder="Email" class="email" />
-			<input type="number" placeholder="Telefon No" class="telNo" />
-			<input type="text" placeholder="Adres" class="adres"/>
-			<input type="password" placeholder="Şifre" class="sifre"/>
+			<input type="number" placeholder="TC Kimlik No" class="tc_kimlik_no" id="tc_kimlik_no"/>
+			<input type="text" placeholder="Ad Soyad"class="adSoyad" id="adSoyad"/>
+			<input type="email" placeholder="Email" class="email" id="email" />
+			<input type="number" placeholder="Telefon No" class="telNo" id="telNo" />
+			<input type="text" placeholder="Adres" class="adres" id="adres"/>
+			<input type="password" placeholder="Şifre" class="sifre" id="sifre"/>
 			<h4>Cinsiyet</h4>
 			<div class="gender">
-			<input type="radio" name="gender" value="erkek" class="erkek"> Erkek
-            <input type="radio" name="gender" value="kadin" class="kadin"> Kadın
+			<input type="radio" name="gender" value="erkek" class="erkek" id="erkek"> Erkek
+            <input type="radio" name="gender" value="kadin" class="kadin" id="kadin"> Kadın
 			</div>
-			<button class="hesapOlustur">Hesap Oluştur</button>
+			<button class="hesapOlustur" id="hesapOlustur">Hesap Oluştur</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
