--- a/login.html
+++ b/login.html
@@ -54,6 +54,6 @@
 <div class="section-center">
 	<h1 class="mb-0">AKAR BANK</h1>
 </div>
-	<script src="login.js"></script>
+	<script type="text/javascript" src="login.js"></script>
 </body>
 </html>
