--- a/smsregister.html
+++ b/smsregister.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 	<link rel="stylesheet" type="text/css" href="smsregister.css">
+	<script src="login.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +28,8 @@
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Son Bir Adım Kaldı</h1>
-				<p>Telefonunuza Gelen SMS Kodunu Girdikden Sonra Hesabınıza Giriş Yapabilirsiniz.</p>
+				<h2 id="email">dasdadasd</h2>
+				<p>E-Mailinize Gelen Kodu Girdikden Sonra Hesabınıza Giriş Yapabilirsiniz.</p>
 			</div>
 		</div>
 	</div>
